--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,17 @@
-:root {
+html, body {
+    height: 100vh;
+    width: 100vw;
+  }
 
-}
-
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  
+  button{
+    cursor: pointer;
+  }
+  a{
+    text-decoration: none;
+  }
