--- a/src/components/sideBar/sidebar.css
+++ b/src/components/sideBar/sidebar.css
@@ -3,7 +3,7 @@
     position: absolute;
     top: 0;
     left: -258px;
-    height: 100%;
+    height: calc(110vh - 56px);
     z-index: 2;
     margin: 0 auto;
     transition: all 0.6s;
