--- a/src/pages/404/notFound.module.css
+++ b/src/pages/404/notFound.module.css
@@ -1,24 +1,53 @@
 
-
+  @import url(/src/variables.css);
 .container{
-    height: calc(100vh - 50px);
+    height: calc(100vh - var(--header-height));
     width: 100vw;
     display: flex   ;
+    background-color: #607E6D;
+    
+    flex-direction: column;
 }
+/* Image Section */
 .firstSection{
     width: 100%;
-    height: 100%;
-}
-.imageBg{
-    width: 50%;
     height: 50%;
+    display: flex;
+    justify-content: center;
+}   
+.imageBg{
     display: block;
-    
+    width: 100%;
 }
+/* Second Section */
 .secondSection{
-    width: 50%;
+    width: 100%;
+    height: 50%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+   
+    padding:0 50px ;
+    gap: 10px;
+    text-align: center;
+}
+.notFound{
+    font-size: 9rem;
+    color: var(--primary-color);
+}
+@media only screen and (min-width:900px) {
+    .container{
+        flex-direction: row;
+        align-items: center;
+    }
+    .firstSection{
+        width: 50%;
+        height: 60%;
+       
+    }
+    .secondSection{
+        width: 50%;
+        height: 60%;
+        justify-content: center;
+    }
 }
