--- a/src/components/cards/categoryCard/elementCard/elementCard.css
+++ b/src/components/cards/categoryCard/elementCard/elementCard.css
@@ -2,19 +2,47 @@
     display: flex;
     align-items: center;
     border-bottom: solid 1px #96A8A6;
-    padding-top: 8px;
-    padding-bottom: 8px;
-    /* display: none; */
+    padding: 8px 16px;
+    height: 100%;
+   
+    
 
 }
-.img-product{
-    height: 80px;
-    border-radius: 50%;
-    padding: 10px 10px 0px 10px;
+.element-mounted{
+    animation-name: translateElements;
+    animation-duration: 0.3s;
+    animation-fill-mode: forwards;
+    animation-iteration-count: 1;
+    animation-timing-function: ease-in-out;
 }
+@keyframes translateElements {
+    0%{
+        bottom: 0%
+    }
+    /* 25%{
+        bottom: -20px
+    }
+    50%{
+        bottom: -30px
+    }
+    75%{
+        bottom: -40px
+    } */
+    100%{
+        bottom: -48px;
+    }
+}
+.element-category-container{
+  position: absolute;
+    bottom: 0;
+  height: 48px;
+  width: 100%;
+  z-index: -1;
+}
+
 .products-datos{
     padding: 5px;
-    width: 90%;
+    width: 80%;
     display: flex;
     justify-content: space-between;
 }
