se carga diseno de entrada de productos

--- a/src/components/sideBar/sidebar.css
+++ b/src/components/sideBar/sidebar.css
@@ -33,8 +33,8 @@
 }
 .img-perfil{
     margin: 5px auto;
-    width: 15vw;
-    height: 15vh;
+    /* width: 15vw;
+    height: 15vh; */
     border-radius: 50%;
     max-width: 50px;
     min-height: 30px;
