--- a/src/components/cards/categoryCard/elementCard/elementCard.css
+++ b/src/components/cards/categoryCard/elementCard/elementCard.css
@@ -3,39 +3,39 @@
     align-items: center;
     border-bottom: solid 1px #96A8A6;
     padding: 8px 16px;
-    height: 100%;
+    height: 48px;
    
     
-
+/* Animation */
 }
 .element-mounted{
     animation-name: translateElements;
-    animation-duration: 0.3s;
+    animation-duration: 0.5s;
     animation-fill-mode: forwards;
     animation-iteration-count: 1;
     animation-timing-function: ease-in-out;
 }
+
 @keyframes translateElements {
     0%{
-        bottom: 0%
+    /*   height: 0px; */
+        transform: scaleY(0);
+        transform-origin:top;
     }
-    /* 25%{
-        bottom: -20px
-    }
-    50%{
-        bottom: -30px
-    }
-    75%{
-        bottom: -40px
-    } */
+ 
+
     100%{
-        bottom: -48px;
+        transform-origin:top;
+
+        transform: scaleY(1);
+        /* height: 144px; */
+        background-color: var(--primary-color);
     }
 }
 .element-category-container{
-  position: absolute;
+  
     bottom: 0;
-  height: 48px;
+ 
   width: 100%;
   z-index: -1;
 }
@@ -46,3 +46,7 @@
     display: flex;
     justify-content: space-between;
 }
+/* Texto vencido */
+ .spoiled-product{
+    color: var(--third-color)
+ }
