--- a/src/pages/login/login.module.css
+++ b/src/pages/login/login.module.css
@@ -5,6 +5,7 @@
     justify-content: center;
     height: 100vh;
     width: 100vw;
+    position: relative;
   }
   /* Logo image */
   .logo{
@@ -15,6 +16,9 @@
     width: 50px;
     cursor: pointer;
     
+  }
+  .logo:hover{
+    transform: scale(1.05);
   }
 
   /* Contenedor Principal */
