--- a/src/components/crud/product.module.css
+++ b/src/components/crud/product.module.css
@@ -68,3 +68,17 @@
 .contentFormProduct form button:hover{
     background: var(--secondary-color-hover);
 }
+
+
+.activity_action{
+    position: fixed;
+    bottom: 2%;
+    right: 2%;
+}
+
+.activity_action button{
+    background: var(--secondary-color);
+    color: var(--primary-color);
+    border-radius: 20px;
+    padding: 14px;
+}
