--- a/src/components/filter/filter.module.css
+++ b/src/components/filter/filter.module.css
@@ -38,3 +38,11 @@
     cursor: pointer;
     padding: 0 10px;
 }
+@media only screen and (min-width:900px){
+    .filtrosContainer{
+        overflow-x: hidden;
+    }
+    .chipsContainer{
+        overflow-x:hidden ;
+    }
+}
