--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,11 @@
 html, body {
-    height: 100vh;
-    width: 100vw;
+    /* height: 100vh; */
+    width: 100%;
     
   }
-
+  #root{
+    /* overflow-x: auto; */
+  }
   * {
     margin: 0;
     padding: 0;
