--- a/src/components/crud/product.module.css
+++ b/src/components/crud/product.module.css
@@ -105,6 +105,9 @@
 }
 
 .contentLink{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     margin-bottom: 20px;
     margin-top: 10px;
 }
@@ -113,4 +116,15 @@
     color: var(--secondary-color);
     font-weight: bolder;
     padding: 1em;
+}
+.contentLink span.favorite{
+    font-size: 20px;
+    cursor: pointer;
+    transition: all ease-out 1s;
+}
+.contentLink span.favorite[data-favorite="0"]{
+    color: brown;
+}
+.contentLink span.favorite[data-favorite="1"]{
+    color: #cbcb14;
 }
