--- a/src/components/crud/product.module.css
+++ b/src/components/crud/product.module.css
@@ -75,6 +75,7 @@
     font-weight: bolder;
 }
 .contentFormProduct form .contentField input,
+.contentFormProduct form .contentField select,
 .contentFormProduct form .contentField button{
     font-size: 20px;
     margin-top: 10px;
