--- a/src/pages/app/foodSavior.css
+++ b/src/pages/app/foodSavior.css
@@ -303,3 +303,10 @@ td:first-child{
         width: auto;
     }
 }
+
+
+@media only screen and (min-width:450px) and (max-width:1000px){
+    .pricePlansContainer{
+        left: 30%;
+    }
+}
