--- a/src/components/cards/categoryCard/elementCard/elementCard.css
+++ b/src/components/cards/categoryCard/elementCard/elementCard.css
@@ -1,3 +1,10 @@
+
+.img-product-alerta{
+    width: 40px;
+    aspect-ratio: 1/1;
+    border-radius: 50%;
+    margin-right: 16px;
+}
 .products-detalle{
     display: flex;
     align-items: center;
