--- a/src/components/form/form.css
+++ b/src/components/form/form.css
@@ -29,8 +29,7 @@
   border-radius: 4px;
   width: 100%;
   height: 56px;
-  outline: none;
-  padding-left: 16px;
+  
 }
 
 .input-container {
@@ -61,12 +60,7 @@ input:focus + i + .label-password, .animation-input + i + .label-password {
   background: transparent;
   left: 16px !important;
 }
-.profile-focus{
-  top: -6.5px;
-  font-size: 12px;
-  background: transparent;
-  left: 21px !important;
-}
+
 input:focus + i + .label-email, .animation-input + i + .label-email {
   top: -6.5px;
   font-size: 12px;
@@ -98,21 +92,7 @@ input:focus + i + label {
 .animation-input, .animation-input + i + label {
   color: gray;
 }
-.apertura{
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 33px;
-  height: 2px;
-  width: 0px;
-  letter-spacing: 10px;
-  background: #fff;
-  transform: skewX(-45deg);
-  transition: 0.2s;
-  width: 20px;
-  transform: scale(4.0);
-  letter-spacing: 50px;
-}
+
 /* Apertura del borde para que suba el label */
 i::after {
   content: "";
@@ -199,3 +179,30 @@ input:focus + i::after, .animation-input + i::after {
   margin-left: 16px;
   margin-top: 4px;
 }/*# sourceMappingURL=main.css.map */
+
+/* Profile CSS */
+.profile-focus{
+  top: -6.5px;
+  font-size: 12px;
+  background: transparent;
+  left: 21px !important;
+}
+.apertura{
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 33px;
+  height: 2px;
+  width: 0px;
+  letter-spacing: 10px;
+  background: #fff;
+  transform: skewX(-45deg);
+  transition: 0.2s;
+  width: 20px;
+  transform: scale(4.0);
+  letter-spacing: 50px;
+}
+.input-profile{
+  outline: none;
+  padding-left: 16px;
+}
