--- a/src/pages/profile/profile.css
+++ b/src/pages/profile/profile.css
@@ -10,7 +10,6 @@
     padding-top: 20px;
     padding-bottom: 20px;
     position: relative;
-    /* border: 1px solid blue; */
 }
 
 .profile-avatar{
@@ -22,11 +21,9 @@
 
 .fa-pencil{
     position: absolute;
-    /* top: 111px;
-    left: 99px; */
+    cursor: pointer;
     top: 170px;
     right: 10px;
-    /* border: 1px solid gray; */
     padding: 10px;
     border-radius: 50%;
     background-color: gray;
@@ -40,4 +37,7 @@
 .fa-pencil:hover{
     background-color: hsla(140, 1%, 48%, 0.75);
     transition: all .3s ease-in-out
+}
+.image-avatar-profile{
+    display: none;
 }
