--- a/src/pages/subscription/subscription.css
+++ b/src/pages/subscription/subscription.css
@@ -47,6 +47,10 @@
     left: 2%;
     border-radius:10px;
 }
+.chip-toggle-effect{
+    transform: translateX(55px);
+    transition: all ease-out 0.8s;
+}
 .subscription-plan-card{
     border: solid 0.3px rgba(232,232,232,255);
     display: flex;
@@ -66,10 +70,11 @@
 .card-plan-name div h6{
     color:rgba(177,177,177,255) ;
 }
-/* Pricing Section */
-.subscription-pricing{
-   
+.period-subscription{
+    text-align: center;
 }
+/* Pricing Section */
+
 .subscription-plan-card figure{
     width: 15%;
 }
@@ -199,6 +204,45 @@
     margin-left: 5px;
     color: #0085ff;
  }
+ /* Pop Up */
+    
+        .card-form-subscription-popup{
+            width: 80%;
+            position: absolute;
+            top: 20%;
+            left: 12%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            z-index: 3;
+            background-color: #fff;
+            border: solid 1px black;
+            border-radius: 10px;
+            height: 50%;
+
+        }
+        #form-checkout {
+            display: flex;
+            flex-direction: column;
+            max-width: 600px;
+            width: 80%;
+        }
+
+        .container-card-subscription {
+            height: 30px;
+            display: inline-block;
+            border: 1px solid rgb(118, 118, 118);
+            border-radius: 2px;
+            padding: 1px 2px;
+        }
+
+
+
+
+
+
+
 
  @media only screen and (min-width:375px) and (max-width:950px){
     .subscription-section-container {
@@ -210,5 +254,9 @@
     }
     .subscription-chips{
         width: 30%;
+    }
+    .chip-toggle-effect{
+        transform: translateX(45px);
+        
     }
  }
